edited the README, did testing and applied fixes

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <!-- Loading spinner -->
         <section id="loading-section" class="hidden">
             <div class="loader"></div>
-            <p>Loading questions...</p>
+            <h3>Loading questions...</h3>
         </section>
         
         <!-- Quiz questions -->
